# YG

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.props  LICENSE  README.md
.github/workflows/: build.yml
native/: CMakeLists.txt  build.ps1
src/: Enyim.YG.slnx  codegen.ps1
src/YG/: Enyim.YG.csproj  YGNode.cs
src/YG/bindings/: NativeAnnotationAttribute.cs  NativeTypeNameAttribute.cs  YG.cs  YGAlign.cs  YGBoxSizing.cs  YGConfig.cs  YGDimension.cs  YGDirection.cs  YGDisplay.cs  YGEdge.cs  YGErrata.cs  YGExperimentalFeature.cs  YGFlexDirection.cs  YGGridTrackType.cs  YGGutter.cs  YGJustify.cs  YGLogLevel.cs  YGMeasureMode.cs  YGNode.cs  YGNodeType.cs  YGOverflow.cs  YGPositionType.cs  YGSize.cs  YGUnit.cs  YGValue.cs  YGWrap.cs
